@@ -1,3 +1,6 @@
+# Unreleased
+- [change][minor] Replace `WriteHalfType` and `ReadHalfType` with generic associated types.
+
 # Version 0.5.1 - 2022-05-24
 - [fix][patch] Fix version of macro crate dependency.
 
